--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,34 @@
+bash==0.6
+Brotli==1.0.9
+certifi==2021.10.8
+charset-normalizer==2.0.7
+click==8.0.3
+dash==0.17.4
 dash-core-components==0.5.0
 dash-html-components==0.6.0
 dash-renderer==0.7.2
-dash==0.17.4
+dash.ly==0.17.3
+dataclasses==0.8
+Flask==2.0.2
+Flask-Compress==1.10.1
+Flask-SeaSurf==0.3.1
 gunicorn==19.6.0
-requests==2.26.0
-whitenoise==5.3.0
+idna==3.3
+importlib-metadata==4.8.1
+itsdangerous==2.0.1
+Jinja2==3.0.2
+MarkupSafe==2.0.1
+numpy==1.19.5
 pandas==1.1.5
+pkg_resources==0.0.0
+plotly==5.3.1
+python-dateutil==2.8.2
+pytz==2021.3
+requests==2.26.0
+six==1.16.0
+tenacity==8.0.1
+typing-extensions==3.10.0.2
+urllib3==1.26.7
+Werkzeug==2.0.2
+whitenoise==5.3.0
+zipp==3.6.0
